Final Documentation Commit

--- a/EVA_S1.ipynb
+++ b/EVA_S1.ipynb
@@ -26,12 +26,32 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EOfpYsezGIG4",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Open CV Edge Detection Tutorial"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "j9Ix4EtfGwAk",
+        "colab_type": "text"
+      },
+      "source": [
+        "Edge Detectors are used in Image Processing algorithms to bring out some of the patterns in the given Image"
+      ]
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "GjP6iXBKDwQA",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         "# import the necessary packages\n",
         "\n",
@@ -55,12 +75,22 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "as1TkfG8GQ6S",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Importing Image"
+      ]
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "XkbltHxRD_zo",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         "image = url_to_image(\"https://fontsarena-cd5e.kxcdn.com/wp-content/uploads/2019/04/helvetica-now-font-400x364.png\")"
       ],
@@ -68,6 +98,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "B-mAhHMlGVko",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Displaying Image"
+      ]
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "fZ4mROjoEO72",
         "colab_type": "code",
@@ -77,12 +118,11 @@
           "height": 381
         }
       },
-      "cell_type": "code",
       "source": [
         "from google.colab.patches import cv2_imshow\n",
         "cv2_imshow(image)"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -99,12 +139,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "f1xcAz1yGY3-",
+        "colab_type": "text"
+      },
+      "source": [
+        "### OpenCV Functions"
+      ]
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "46_1y1HtE336",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         "edges = cv2.Canny(image,100,200)"
       ],
@@ -112,6 +162,7 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "OA0SsldTFLtp",
         "colab_type": "code",
@@ -121,11 +172,10 @@
           "height": 381
         }
       },
-      "cell_type": "code",
       "source": [
         "cv2_imshow(edges)"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -142,6 +192,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eLDb7q2CGqZA",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Vertical Edge Detector"
+      ]
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "yDi_y8wxFOSR",
         "colab_type": "code",
@@ -151,7 +212,6 @@
           "height": 381
         }
       },
-      "cell_type": "code",
       "source": [
         "#kernel = np.ones((3,3),np.float32)/25\n",
         "kernel = np.float32([[-1,0,1],[-1,0,1],[-1,0,1]])\n",
@@ -159,7 +219,7 @@
         "dst = cv2.filter2D(image,-1,kernel)\n",
         "cv2_imshow(dst)"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -176,26 +236,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "ByaxxeA328ms",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "#Horizontal Edge Detector\n"
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "FdavXhz9FsTX",
         "colab_type": "code",
+        "outputId": "768cee3b-32ca-4c86-82a1-89eed7b3ac4a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 381
-        },
-        "outputId": "768cee3b-32ca-4c86-82a1-89eed7b3ac4a"
+        }
       },
-      "cell_type": "code",
       "source": [
         "#kernel = np.ones((3,3),np.float32)/25\n",
         "kernel = np.float32([[-1,-1,-1],[0,0,0],[1,1,1]])\n",
@@ -203,7 +263,7 @@
         "dst = cv2.filter2D(image,-1,kernel)\n",
         "cv2_imshow(dst)"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -220,26 +280,36 @@
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "S9NAh5FU3M7H",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "# 45 Degree Angle Detector\n"
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jMVrp8jXHDmA",
+        "colab_type": "text"
+      },
+      "source": [
+        "Both +ve and -ve"
+      ]
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "gmcMjstr24i2",
         "colab_type": "code",
+        "outputId": "6e4a72ee-a167-41ea-dee3-68755c7500b6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 381
-        },
-        "outputId": "6e4a72ee-a167-41ea-dee3-68755c7500b6"
+        }
       },
-      "cell_type": "code",
       "source": [
         "#kernel = np.ones((3,3),np.float32)/25\n",
         "kernel = np.float32([[0,-1,-1],[1,0,-1],[1,1,0]])\n",
@@ -247,7 +317,7 @@
         "dst = cv2.filter2D(image,-1,kernel)\n",
         "cv2_imshow(dst)"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -264,16 +334,16 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "ImgOasco31rL",
         "colab_type": "code",
+        "outputId": "940ec2b8-8400-4195-ce41-ad3bdec7eedc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 381
-        },
-        "outputId": "940ec2b8-8400-4195-ce41-ad3bdec7eedc"
+        }
       },
-      "cell_type": "code",
       "source": [
         "#kernel = np.ones((3,3),np.float32)/25\n",
         "kernel = np.float32([[0,1,1],[-1,0,1],[-1,-1,0]])\n",
@@ -281,7 +351,7 @@
         "dst = cv2.filter2D(image,-1,kernel)\n",
         "cv2_imshow(dst)"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -298,32 +368,32 @@
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "XQgNfekPUASx",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
-        "#Image"
+        "# New Image"
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "gO4L8xhD6gak",
         "colab_type": "code",
+        "outputId": "18ba0bea-ed9c-49c4-f1e7-396e4e701f27",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 252
-        },
-        "outputId": "18ba0bea-ed9c-49c4-f1e7-396e4e701f27"
+        }
       },
-      "cell_type": "code",
       "source": [
         "image = url_to_image(\"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsbil82tz99dnP7f9WSuIlu5EKiykJujMvJ0uEw6ID0GwaEnLT\")\n",
         "from google.colab.patches import cv2_imshow\n",
         "cv2_imshow(image)"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -340,26 +410,36 @@
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "JUmTRX-lUDfI",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "#Vertical Edge Detector"
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zctRErTfHnsB",
+        "colab_type": "text"
+      },
+      "source": [
+        "Detects the edges present at 90 degree"
+      ]
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "k8Q-3cbSKRih",
         "colab_type": "code",
+        "outputId": "d9b47988-728f-42ee-eb6f-dbaa32506dac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 252
-        },
-        "outputId": "d9b47988-728f-42ee-eb6f-dbaa32506dac"
+        }
       },
-      "cell_type": "code",
       "source": [
         "#kernel = np.ones((3,3),np.float32)/25\n",
         "kernel = np.float32([[-1,0,1],[-1,0,1],[-1,0,1]])\n",
@@ -368,7 +448,7 @@
         "cv2_imshow(dst)\n",
         "\n"
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -385,26 +465,36 @@
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "-Vq1eTdfUMSy",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "#Horizontal Edge Detector"
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sKV7r_ImHiHi",
+        "colab_type": "text"
+      },
+      "source": [
+        "Detects the edges present at 0 degree"
+      ]
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "ZrtCk6IN69lP",
         "colab_type": "code",
+        "outputId": "e300efed-589b-4264-ec60-2f4f0224ab09",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 252
-        },
-        "outputId": "e300efed-589b-4264-ec60-2f4f0224ab09"
+        }
       },
-      "cell_type": "code",
       "source": [
         "#kernel = np.ones((3,3),np.float32)/25\n",
         "kernel = np.float32([[-1,-1,-1],[0,0,0],[1,1,1]])\n",
@@ -412,7 +502,7 @@
         "dst = cv2.filter2D(image,-1,kernel)\n",
         "cv2_imshow(dst)"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -429,26 +519,36 @@
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "sszPml-pUODJ",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "#45 Degree Detector"
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WXKLcKODHcyR",
+        "colab_type": "text"
+      },
+      "source": [
+        "Detects only edges at 45 degree"
+      ]
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "IFSyz6qh7CbI",
         "colab_type": "code",
+        "outputId": "6f983501-ab4a-4301-d6ea-456b51d26a93",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 252
-        },
-        "outputId": "6f983501-ab4a-4301-d6ea-456b51d26a93"
+        }
       },
-      "cell_type": "code",
       "source": [
         "#kernel = np.ones((3,3),np.float32)/25\n",
         "kernel = np.float32([[0,1,1],[-1,0,1],[-1,-1,0]])\n",
@@ -456,7 +556,7 @@
         "dst = cv2.filter2D(image,-1,kernel)\n",
         "cv2_imshow(dst)"
       ],
-      "execution_count": 27,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -473,26 +573,36 @@
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "mYnIW9cSJUKp",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "#BLUR FILTER"
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "luWgAc0bHZ-o",
+        "colab_type": "text"
+      },
+      "source": [
+        "Make the image look like blurred"
+      ]
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "XvpcWo0A7G4x",
         "colab_type": "code",
+        "outputId": "b663a96c-6e3a-42bf-842c-badb66e392bc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 252
-        },
-        "outputId": "b663a96c-6e3a-42bf-842c-badb66e392bc"
+        }
       },
-      "cell_type": "code",
       "source": [
         "#kernel = np.ones((3,3),np.float32)/25\n",
         "kernel = 1/9 * np.float32([[1,1,1],[1,1,1],[1,1,1]])\n",
@@ -500,7 +610,7 @@
         "dst = cv2.filter2D(image,-1,kernel)\n",
         "cv2_imshow(dst)"
       ],
-      "execution_count": 38,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -517,26 +627,36 @@
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "cSGNRjXQTtOn",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "# Sharpen Filter"
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vXlmt_-_HWYi",
+        "colab_type": "text"
+      },
+      "source": [
+        "Sharpens the image "
+      ]
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "sAvbcX6l7TkB",
         "colab_type": "code",
+        "outputId": "f2d58851-006e-4040-c352-ce548189accb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 252
-        },
-        "outputId": "f2d58851-006e-4040-c352-ce548189accb"
+        }
       },
-      "cell_type": "code",
       "source": [
         "#kernel = np.ones((3,3),np.float32)/25\n",
         "kernel = np.float32([[0,-0.5,0],[-0.5,3,-0.5],[0,-0.5,0]])\n",
@@ -544,7 +664,7 @@
         "dst = cv2.filter2D(image,-1,kernel)\n",
         "cv2_imshow(dst)"
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -561,33 +681,43 @@
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "PpoYkIPrTo54",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "# Identity Function\n"
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sBAL8tAaHTJo",
+        "colab_type": "text"
+      },
+      "source": [
+        "Return the original Image"
+      ]
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "bRcjZM-DJ4k9",
         "colab_type": "code",
+        "outputId": "e98ed386-aa1d-4a7d-bd8f-e5f9711b7bb6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 252
-        },
-        "outputId": "e98ed386-aa1d-4a7d-bd8f-e5f9711b7bb6"
+        }
       },
-      "cell_type": "code",
       "source": [
         "kernel = np.float32([[0,0,0],[0,1,0],[0,0,0]])\n",
         "\n",
         "dst = cv2.filter2D(image,-1,kernel)\n",
         "cv2_imshow(dst)"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -604,12 +734,12 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "mhAMJju7MeAz",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         ""
       ],
