--- a/EVA_S1.ipynb
+++ b/EVA_S1.ipynb
@@ -734,6 +734,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qvp_OAt2IJIQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "---\n",
+        "# References\n",
+        "\n",
+        "\n",
+        "[Setosa Image Kernels](http://setosa.io/ev/image-kernels/)"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "mhAMJju7MeAz",
