--- a/Session2.ipynb
+++ b/Session2.ipynb
@@ -681,15 +681,20 @@
       },
       "source": [
         "'''\n",
-        "1) The Last Convol\n",
+        "1) No Non-linearity before softmax :- The Last Convolution layer has *Relu* activation layer specified which should not be there because Relu will simply throw away information without adding any additional benefits \n",
         "\n",
-        "The number of layers in the network to predict the images of size 28*28 is much more than needed .\n",
-        "   Due to this every layer is almost learning the same things.\n",
-        "   Number of layers = 8\n",
+        "2) No. of Layers should be less :- The number of layers in the network to predict the images of size 28*28 is much more than needed .\n",
+        "                                   Due to this every layer is almost learning the same things.\n",
+        "                                   Number of layers = 8\n",
         "   \n",
-        "2) Most importantly. these many number of channels are not required. As the images have not much complexity\n",
+        "2) Large Number of Parameters :- Most importantly. these many number of channels which are not required. As the images have not much complexity\n",
         "\n",
-        "3) Also sudden decrease in channel number from 2048 to 10 makes vital information to lose. Instead could have used 1*1 conv to mix the channels\n",
+        "3) Use of 1*1 filter :- Also sudden decrease in channel number from 2048 to 10 makes vital information to lose. Instead could have used 1*1 conv to mix the channels\n",
+        "\n",
+        "4) Batch-Normalization :- We could also use batch norm to prevent network from overfitting\n",
+        "\n",
+        "5) Batch Size :- Batch Size could be made more so as to pass all varieties of images from a class\n",
+        "\n",
         "'''"
       ],
       "execution_count": 0,
